# pyumldiagrams

./: .gitignore  .mypi.ini  .readthedocs.yaml  .travis.yml  README.md  cleanup.sh  mkdocs.yml  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-publish.yml
docs/: PyUmlDiagramDefinitionsV11.put  PyumlDiagrammerLogo.odg  api.rst  conf.py  index.md  index.rst  modules.rst  requirements.txt  usage.rst
docs/pdfdiagrams/: Defaults.html  Definitions.html  Diagram.html  DiagramCommon.html  DiagramLine.html  Internal.html  UnsupportedException.html  index.html
docs/pdfdiagrams/resources/: index.html
docs/pyumldiagrams/: BaseDiagram.html  Common.html  Defaults.html  Definitions.html  IDiagramLine.html  Internal.html  UnsupportedException.html  index.html
docs/pyumldiagrams/image/: ImageCommon.html  ImageDiagram.html  ImageFormat.html  ImageLine.html  index.html
docs/pyumldiagrams/pdf/: Diagram.html  DiagramLine.html  FPDFExtended.html  PdfCommon.html  (+4 more)
docs/source/: api.rst  conf.py  index.rst
docs/usage/: BasicClass.rst  BasicFields.rst  BasicMethod.rst  Inheritance.rst  usage.rst
pdf/: Definitions.py  Diagram.py
pdfdiagrams/: Definitions.py  Diagram.py  DiagramCommon.py  DiagramLine.py
pdfdiagrams/resources/: Vera.pkl
pyumldiagrams/: BaseDiagram.py  Common.py  CommonAbsolute.py  Defaults.py  Definitions.py  DiagramCommon.py  IDiagramLine.py  Internal.py
pyumldiagrams/image/: ImageCommon.py  ImageDiagram.py  ImageFormat.py  ImageLine.py
pyumldiagrams/pdf/: Common.py  Definitions.py  Diagram.py  DiagramCommon.py  DiagramLine.py  PdfCommon.py  PdfDiagram.py  PdfDiagramLine.py  PdfLine.py
pyumldiagrams/xmlsupport/: AbstractToClassDefinition.py  ToClassDefinition.py  UnTangleLineDefinition.py  UnTangleToClassDefinition.py  XmlConstants.py
scripts/: cleanup.sh  diffpdf.sh  gendoc.sh  packageme.sh  runmypy.sh  runtests.sh
scripts/pdoc3Templates/: credits.mako  head.mako  logo.mako
src/pdfdiagrams/: Defaults.py  Definitions.py  Diagram.py  DiagramCommon.py  DiagramLine.py  Internal.py  InvalidPositionException.py
src/pyumldiagrams/: _version.py
src/tests/: MonoFonto.pkl  TestAll.py  TestDiagram.py  TestDiagramCommon.py  TestDiagramLine.py  simpleDemo.py
tests/: FuturistFixedWidth.pkl  TestAll.py  TestBase.py  TestConstants.py  TestDefinitions.py  TestDiagram.py  TestDiagramBase.py  TestDiagramCommon.py  TestDiagramLine.py  TestDiagramParent.py  TestTemplate.py  TestToClassDefinition.py  Vera.pkl  simpleDemo.py
tests/image/: TestCommon.py  TestImageDiagram.py  TestImageLine.py
tests/pdf/: TestDiagram.py  TestDiagramLine.py  TestPdfDiagram.py  TestPdfLine.py
tests/resources/: AggregatorRelativePositions.put  AggregatorRelativePositions.xml  AssociationRelativePositions.put  AssociatorRelativePositions.put  AssociatorRelativePositions.xml  BendTest.xml  BendTestV11.xml  ClassesWithLollipop.xml  ClassicInterface.put  ClassicInterface.xml  ComposerRelativePositions.put  ComposerRelativePositions.xml  DisplayMethodParametersTest.xml  DoDisplayClassMethods.xml  DoNotDisplayClassMethods.xml  FieldsTestV11.put  FieldsTestV11.xml  LargeClassBug.put  LargeClassBug.xml  LinkedNotes.put  LinkedNotes.xml  ManyLinksV11.put  ManyLinksV11.xml  MethodParametersTestV11.put  MethodParametersTestV11.xml  NoMethodAttributeTest.xml  NotSupportedUseCaseDiagram.put  NotSupportedUseCaseDiagram.xml  PythonMethods.put  PythonMethods.xml  PythonMethodsV11.put  PythonMethodsV11.xml  SmallMultiDocumentV11.put  SmallMultiDocumentV11.xml  testLoggingConfig.json  testLoggingConfiguration.json
tests/usage/: __init__.py
tests/xmlsupport/: TestDefinitionType.py  TestToClassDefinition.py  TestUnTangleToClassDefinition.py  TestUnTangleUmlLineDefintions.py
(+27 files in other folders)
