[build-system]
requires = ['setuptools', 'wheel']
build-backend = "setuptools.build_meta"

[project]
name='pyumldiagrams'
dynamic     = ["version"]
description = 'Draw UML diagrams in various formats'
readme      = "README.md"
authors     = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
maintainers = [{name = 'Humberto A. Sanchez II', email = 'Humbert.A.Sanchez.II@gmail.com'}]
keywords    = ['pyut', 'UML', 'Diagrams', 'Python',]
license  = 'AGPL-1.0-or-later'

classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Graphics",
]

dependencies = [
  'fpdf2==2.8.2',
  'Pillow==12.1.1',
  'untangle==1.2.1',
  'codeallybasic>=1.8.1',
  'codeallyadvanced>=1.3.3',
]

[project.urls]
Repository = 'https://github.com/hasii2011/pyumldiagrams'


[tool.setuptools.packages.find]
where = ['src']

[tool.setuptools.package-data]
pyumldiagrams                 = ['py.typed']

[tool.setuptools.dynamic]
version = {attr = 'pyumldiagrams.__version__'}
